<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fullMargin"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_btn_open_box"
        style="@style/mainBtnStyle"
        android:text="@string/main_btn_open_box"
        app:layout_constraintBottom_toTopOf="@id/main_btn_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_btn_options"
        style="@style/mainBtnStyle"
        android:text="@string/main_btn_options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_btn_open_box"
        app:layout_constraintStart_toStartOf="@+id/main_btn_open_box"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_btn_about"
        style="@style/mainBtnStyle"
        android:layout_marginTop="@dimen/margeVertical"
        android:text="@string/main_btn_about"
        app:layout_constraintEnd_toEndOf="@+id/main_btn_open_box"
        app:layout_constraintStart_toStartOf="@+id/main_btn_open_box"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_options" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_btn_exit"
        style="@style/mainBtnStyle"
        android:layout_marginTop="@dimen/largeMarginVertical"
        android:text="@string/main_btn_exit"
        app:layout_constraintEnd_toEndOf="@+id/main_btn_open_box"
        app:layout_constraintStart_toStartOf="@+id/main_btn_open_box"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_about" />

</androidx.constraintlayout.widget.ConstraintLayout>